--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
 - npm prune
 script: npm run build
 after_script:
-- script: bash ./deploy.sh
+- bash ./deploy.sh
 env:
   global:
     GH_REF: github.com/ruuvi/ruuvi.github.io.git
