--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ cache:
   - node_modules
 before_install:
 - echo -e "machine github.com\n  login $CI_USER_TOKEN" >> ~/.netrc
-- '[ "${TRAVIS_PULL_REQUEST}" = "false" ] && git submodule update --init --recursive
-  && cd api-node && git fetch && git merge origin/layout && cd .. || true'
+- '[ "${TRAVIS_PULL_REQUEST}" = "false" ] && git fetch && git checkout layout || true'
 install:
 - npm install
 - npm prune
